add ClientBase.WithHost and get rid of HeaderInterceptor

--- a/src/csharp/Grpc.Core/Grpc.Core.csproj
+++ b/src/csharp/Grpc.Core/Grpc.Core.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Utils\GrpcPreconditions.cs" />
     <Compile Include="CallInvoker.cs" />
     <Compile Include="DefaultCallInvoker.cs" />
+    <Compile Include="InterceptingCallInvoker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Grpc.Core.nuspec" />
