--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,6 @@ add_library(grpc
   src/core/channel/channel_stack.c
   src/core/channel/channel_stack_builder.c
   src/core/channel/client_channel.c
-  src/core/channel/client_uchannel.c
   src/core/channel/compress_filter.c
   src/core/channel/connected_channel.c
   src/core/channel/http_client_filter.c
@@ -148,9 +147,9 @@ add_library(grpc
   src/core/compression/compression_algorithm.c
   src/core/compression/message_compress.c
   src/core/debug/trace.c
-  src/core/httpcli/format_request.c
-  src/core/httpcli/httpcli.c
-  src/core/httpcli/parser.c
+  src/core/http/format_request.c
+  src/core/http/httpcli.c
+  src/core/http/parser.c
   src/core/iomgr/closure.c
   src/core/iomgr/endpoint.c
   src/core/iomgr/endpoint_pair_posix.c
@@ -185,6 +184,8 @@ add_library(grpc
   src/core/iomgr/timer.c
   src/core/iomgr/timer_heap.c
   src/core/iomgr/udp_server.c
+  src/core/iomgr/unix_sockets_posix.c
+  src/core/iomgr/unix_sockets_posix_noop.c
   src/core/iomgr/wakeup_fd_eventfd.c
   src/core/iomgr/wakeup_fd_nospecial.c
   src/core/iomgr/wakeup_fd_pipe.c
@@ -246,7 +247,7 @@ add_library(grpc
   src/core/transport/static_metadata.c
   src/core/transport/transport.c
   src/core/transport/transport_op_string.c
-  src/core/httpcli/httpcli_security_connector.c
+  src/core/http/httpcli_security_connector.c
   src/core/security/b64.c
   src/core/security/client_auth_filter.c
   src/core/security/credentials.c
@@ -296,7 +297,6 @@ add_library(grpc_unsecure
   src/core/channel/channel_stack.c
   src/core/channel/channel_stack_builder.c
   src/core/channel/client_channel.c
-  src/core/channel/client_uchannel.c
   src/core/channel/compress_filter.c
   src/core/channel/connected_channel.c
   src/core/channel/http_client_filter.c
@@ -324,9 +324,9 @@ add_library(grpc_unsecure
   src/core/compression/compression_algorithm.c
   src/core/compression/message_compress.c
   src/core/debug/trace.c
-  src/core/httpcli/format_request.c
-  src/core/httpcli/httpcli.c
-  src/core/httpcli/parser.c
+  src/core/http/format_request.c
+  src/core/http/httpcli.c
+  src/core/http/parser.c
   src/core/iomgr/closure.c
   src/core/iomgr/endpoint.c
   src/core/iomgr/endpoint_pair_posix.c
@@ -361,6 +361,8 @@ add_library(grpc_unsecure
   src/core/iomgr/timer.c
   src/core/iomgr/timer_heap.c
   src/core/iomgr/udp_server.c
+  src/core/iomgr/unix_sockets_posix.c
+  src/core/iomgr/unix_sockets_posix_noop.c
   src/core/iomgr/wakeup_fd_eventfd.c
   src/core/iomgr/wakeup_fd_nospecial.c
   src/core/iomgr/wakeup_fd_pipe.c
