--- a/templates/tools/fuzzer/runners.template
+++ b/templates/tools/fuzzer/runners.template
@@ -35,7 +35,7 @@ template: |
   # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   #
 
-  flags="-max_total_time=$runtime -jobs=3 -workers=3 -artifact_prefix=fuzzer_output/ -max_len=${selected.maxlen}"
+  flags="-max_total_time=$runtime -jobs=$jobs -workers=$jobs -artifact_prefix=fuzzer_output/ -max_len=${selected.maxlen}"
   if [ "$config" == "asan-trace-cmp" ]
   then
     flags="-use_traces=1 $flags"
